--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-<h1>Welcome to SpringIt!</h1>
+<h1>This is my welcome page</h1>
+<img src="images/spring-boot-logo.png"/>
 
 </body>
 </html>
